# file-dedup

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  demo.sh
.github/workflows/: ci.yml  release.yml
docs/: CODE_QUALITY.md  RELEASE_SETUP.md
scripts/: check.sh  release.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
