[package]
name = "file-dedup"
version = "0.4.0"
edition = "2021"
description = "A minimal file deduplication tool"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
